# pkg-counter_fpy

./: Cargo.toml  LICENSE-MIT  Readme.md  rustfmt.toml
.github/workflows/: counter.yml
benches/: counter_bench.rs
examples/: example.rs
src/: lib.rs
tests/: test_counter.rs
